@@ -1,6 +1,7 @@
 package com.project.extension.dto.cliente;
 
 import com.project.extension.dto.endereco.EnderecoMapper;
+import com.project.extension.dto.endereco.EnderecoResponseDto;
 import com.project.extension.dto.status.StatusMapper;
 import com.project.extension.entity.Cliente;
 
@@ -9,13 +10,13 @@ import org.springframework.stereotype.Component;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
 public class ClienteMapper {
 
     private final EnderecoMapper enderecoMapper;
-    private final StatusMapper statusMapper;
 
     public Cliente toEntity(ClienteRequestDto dto){
         if(dto == null) return null;
@@ -24,12 +25,16 @@ public class ClienteMapper {
                 dto.nome(),
                 dto.cpf(),
                 dto.email(),
-                dto.senha(),
-                dto.telefone()
+                dto.telefone(),
+                dto.status()
         );
-
-        cliente.setEnderecos(dto.enderecos().stream().map(enderecoMapper::toEntity).toList());
-        cliente.setStatus(statusMapper.toEntity(dto.status()));
+        if (dto.enderecos() != null) {
+            cliente.setEnderecos(
+                    dto.enderecos().stream()
+                            .map(enderecoMapper::toEntity)
+                            .collect(Collectors.toList())
+            );
+        }
 
         return cliente;
     }
@@ -37,14 +42,41 @@ public class ClienteMapper {
     public ClienteResponseDto toResponse(Cliente cliente) {
         if (cliente == null) return null;
 
+        List<EnderecoResponseDto> enderecos = cliente.getEnderecos() != null
+                ? cliente.getEnderecos().stream().map(enderecoMapper::toResponse).toList()
+                : Collections.emptyList();
+
         return new ClienteResponseDto(
                 cliente.getId(),
                 cliente.getNome(),
                 cliente.getCpf(),
                 cliente.getEmail(),
                 cliente.getTelefone(),
-                statusMapper.toResponse(cliente.getStatus()),
-                cliente.getEnderecos().stream().map(enderecoMapper::toResponse).toList()
+                cliente.getStatus(),
+                enderecos
         );
     }
+
+    public Cliente toEntity(ClienteResponseDto dto) {
+        if (dto == null) return null;
+
+        Cliente cliente = new Cliente(
+                dto.nome(),
+                dto.cpf(),
+                dto.email(),
+                dto.telefone(),
+                dto.status()
+        );
+
+        cliente.setId(dto.id());
+
+        if (dto.enderecos() != null) {
+            cliente.setEnderecos(dto.enderecos().stream().map(enderecoMapper::toEntity).toList());
+        } else {
+            cliente.setEnderecos(Collections.emptyList());
+        }
+
+        return cliente;
+    }
+
 }
